拓扑设备背景状态更新测试

--- a/GlsunView/Views/CurrentAlarm/List.cshtml
+++ b/GlsunView/Views/CurrentAlarm/List.cshtml
@@ -39,7 +39,7 @@
             </label>
             @Html.AuthorityButtonList(userModuleAuth)
         </form>
-        <form style="display:none" action="@Url.Action("Confirm","CurrentAlram")" method="post" id="formConfirm"></form>
+        <form style="display:none" action="@Url.Action("Confirm","CurrentAlarm")" method="post" id="formConfirm"></form>
 </div>
 </div>
 <div class="main_body_content">
