--- a/GlsunView/Views/Subnet/Index.cshtml
+++ b/GlsunView/Views/Subnet/Index.cshtml
@@ -377,6 +377,12 @@
                 return nodes[0];
             return null;
         }
+        //获取所有节点
+        function getAllNode() {
+            return scene.childs.filter(function (e) {
+                return e.elementType == "node";
+            });
+        }
         //生成新子网名称
         function getNewNodeName() {
             var prefix = "新设备";
@@ -588,7 +594,20 @@
             //newNode(Math.random() * 500, Math.random() * 500, "", "Hello", 2);
             console.log(scene.toJson());
         });
-    });
+
+        var allNodes = getAllNode();
+        $.post("@Url.Action("GetSubnetDeviceStatus", "Subnet")", { sId: @ViewBag.SubnetId }, function (data, status) {
+            if (status == "success" && data && data.Code == "") {
+                for(var i = 0; i < data.Data.length; ++i){
+                    var status = data.Data[i];
+                    var node = getNodeByDataId(status.ID);
+                    if(node != null){
+                        node.backgroudColor = status.BackgroundColor;
+                    }
+                }
+            }
+        }, "json");
+    });//$(function)
     function getX(e) {
         e = e || window.event;
         return e.pageX || e.clientX + document.body.scroolLeft;
