--- a/GlsunView/Views/Topology/Index.cshtml
+++ b/GlsunView/Views/Topology/Index.cshtml
@@ -175,9 +175,9 @@
             var node = new JTopo.Node(name);
             var w = 32, h = 32;
             node.xData = xdata;
-            node.backgroudColor = "#f00";
+            node.backgroudColor = "#ccc";
             node.borderWidth = 1;
-            node.borderColor = "192,192,192";
+            node.borderColor = "204,204,204";
             node.font = '13px 微软雅黑'; // 字体
             node.imgSrc = '../image/topo/' + img;
             if (!img || img == "")
