--- a/GlsunView/Content/css/nav.css
+++ b/GlsunView/Content/css/nav.css
@@ -3,9 +3,11 @@
 }
 .nav-bar{
     height: 50px;
-    background-color: #445577;
+    /*background-color: #445577;*/
     color:white;
     font-size: 1em;
+    background-image:url(../../image/banner.gif);
+    background-repeat:repeat-x;
 }
 .nav-bar-menu{
     position: relative;
@@ -19,7 +21,7 @@
 }
 .nav-bar-menu li ul{
     list-style: none;
-    background-color: #338db6;
+    background-color: #445577dd;
 }
 .nav-bar-menu>li a{
     text-decoration: none;
@@ -54,7 +56,8 @@
     padding: 0 5px 0 5px;
 }
 .drop-down-content li a:hover{
-    background-color: #51a7c3;
+    background-color: #fff;
+    color:#445577
 }
 .nav-bar-menu .drop-down:hover .drop-down-content{
     height: 60px;
@@ -66,8 +69,8 @@
     transition: 0.2s ease-in;
     transform: rotate(180deg);
 }
-.drop-down-content li:last-child{
-    background-color: #ee2525;
+.drop-down-content li:last-child a:hover{
+    color:#f00;
 }
 
 .nav-bar-left a{
