登录页面背景填充

--- a/GlsunView/Content/css/login.css
+++ b/GlsunView/Content/css/login.css
@@ -5,6 +5,7 @@ html,body{
 body{
     background-color: #eee;
     background-image: url("../../image/timg.jpg");
+    background-size: cover;
 }
 .main-box{
     position: absolute;
