添加TCP服务池工具

--- a/GlsunView/Views/Device/Index.cshtml
+++ b/GlsunView/Views/Device/Index.cshtml
@@ -190,6 +190,7 @@
                     }
                 }, 500);
                 //更新设备状态
+                updateRequest();
                 setInterval(function () {
                     updateRequest();
                 }, 2000);
